test/spec_vectors/ref/fail/module_4.wat
(module (table $table-invalid 10 (ref null 1)))